# claude

./: .gitignore  README.md
02/: index.html
03/: .gitignore  CLAUDE.md  PRD.md  package-lock.json  package.json
05/: CLAUDE.md  middleware.ts
05/app/: layout.tsx  page.tsx
05/docs/: PLAN.md  PRD.md
05/lib/: auth.ts  todoSync.ts  utils.ts
05/models/: User.ts
05/store/: index.ts
05_design/: package-lock.json  package.json  proxy.ts
05_design/app/: globals.css  page.tsx
05_design/docs/: LOGIN.md
05_design/lib/: fractionalIndex.ts  mongodb.ts  session.ts
05_design/models/: Goal.ts  Todo.ts  WeeklyPlan.ts
05_design/scripts/: migrate-add-user-id.ts
05_design/store/: goalSlice.ts  todoSlice.ts  (+1 more)
06/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  review.md  sample.md
06/docs/: PRD.md  README.md  architecture.md  commit.md  memory.md  voice.md
06/md2short/: __init__.py  _retry.py  caption_plan.py  cli.py  emoticon_map.py  opening.py  pipeline.py  qc.py  render.py  schema.py  script.py  script_engine.py  state.py  transcript.py  tts_text.py  voice.py
06/remotion/: package-lock.json  package.json  tsconfig.json
06/remotion/public/: emoticon
06/remotion/src/: BottomBar.tsx  BrandHeader.tsx  Captions.tsx  Root.tsx  TechExplainer.tsx  VisualLayer.tsx  types.ts
06/tests/: test_caption_plan.py  test_cli_skeleton.py  test_emoticon_map.py  test_opening.py  test_qc.py  test_retry.py  test_schema.py  test_script.py  test_script_engine.py  test_state.py  test_transcript.py  test_tts_text.py
09/: server.js
10/: ret.md
(+66 files in other folders)
