[project]
name = "md2short"
version = "0.1.0"
description = "Markdown to 9:16 Korean shortform MP4 — local CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.5",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
md2short = "md2short.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["md2short"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
